# rp2040-ball-drop-demo

./: CMakeLists.txt  README.md  action_queue.c  action_queue.h  actors.c  actors.h  all_together.c  all_together_actors.c  aqueue_test.c  demo_pins.h  magnet_photogate_test.c  motor_driver.pio  motor_spin_test.c  motor_spin_test_with_pio.c  set_env.cmake  var_from_vcd.py
hardware/: BOM.md  README.md  spinny.step
hardware/STLs/: brace.stl  catchtube.stl  clip.stl  frame.stl  front.stl  magnetholder.stl  wireholder.stl
software/lf_src/: PicoSpinny.lf  PicoSpinnyPIO.lf  motor_driver.pio.h  with_pio.cmake
software/lib/: action_queue.c  action_queue.h  actors.c  actors.h
software/spinny/: CMakeLists.txt  README.md  all_together.c  all_together_actors.c  demo_pins.h  magnet_photogate_test.c  set_env.cmake
software/timing_actors/: CMakeLists.txt  actor_blink.c  actor_hz.c  actor_parallel_fib.c  actor_parallel_matmul.c  actor_race.c  actor_test.c  actor_test_duo.c  aqueue_test.c
software/timing_baremetal/: CMakeLists.txt  parallel_fib.c  parallel_shuffle.c  sema_test.c  sep_fib.s
timing_actors/: actor_parallel_fib.c  actor_test_duo.c  aqueue_test.c
timing_tests/: actor_test.c  aqueue_test.c  memory_hitter.c  multicore_test.c  parallel_fib.c  parallel_float_math.c  parallel_int_math.c  parallel_matmul.c
